# python-mono

./: .gitignore  README.md  mask_udf.py
lib/my_prefect/: pyproject.toml
lib/my_prefect/scripts/: connect_eks.sh  connect_remote_prefect.sh
lib/my_prefect/src/my_prefect/: cli.py  utils.py
lib/my_utils/: pyproject.toml
lib/my_utils/src/my_utils/: cli.py  docker.py  log.py
lib/my_utils/src/my_utils/aws/: personalize.py  session_handler.py
lib/my_utils_cli/: pyproject.toml
lib/my_utils_cli/src/my_utils_cli/: aws_login.py  cli.py  docker.py  eks.py  prefect.py
lib/my_utils_cli/src/my_utils_cli/sh/: clean_webdriver.sh  setup_webdriver.sh
projects/sample/: Dockerfile  README.md  pyproject.toml
projects/sample/tests/: main.py
