[tool.poetry]
name = "my-utils"
version = "0.1.0"
description = ""
authors = ["jz"]
readme = "README.md"
packages = [{include = "my_utils", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}
boto3 = "^1.26.110"
mypy-boto3-personalize = "^1.26.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
